--- a/package.json
+++ b/package.json
@@ -6,17 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type": "module"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "bootstrap": "^4.5.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-input-mask": "^2.0.4",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.1.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.16"
   }
 }
